# notification_test

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  celery_worker.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2025_04_16_1558-6bee30ca3720_init.py
scripts/: celery_worker.sh
src/: celery_app.py  main.py
src/api/v1/: __init__.py  notifications.py
src/core/: cache.py  config.py  db.py  dependencies.py  error_handlers.py  exceptions.py  log_config.json  log_config.py
src/core/celery_conf/: task.py  worker.py
src/models/: notification.py
src/repositories/: notification_repo.py
src/schemas/: enums.py  filters.py  notifications.py
src/services/: notifications_service.py
src/tasks/: __init__.py  analyze.py  mock_ai_service.py  task_analyze.py
tests/: conftest.py  test_service_notifications.py
