[project]
name = "notification-service"
version = "0.1.0"
description = "Notification service - test task for Aezakmi.group"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "fastapi>=0.115.8",
    "SQLAlchemy>=2.0.38",
    "uvicorn-worker>=0.2.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.1",
    "alembic>=1.14.0",
    "aiohttp>=3.11.11",
    "celery[redis]>=5.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.5",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "coverage==7.6.10",
]

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "site-packages",
    "venv",
]

indent-width = 4
line-length = 79

[tool.ruff.lint]
select = ["E", "I", "F", "B", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
